2004-02-02  Jeffrey Stedfast  <fejj@ximian.com>

	Fix for bug #52941

	* em-message-browser.c (em_message_browser_window_new): Set window
	size based on previous size; load from gconf if necessary.
	(window_size_allocate): Save window size changes.

2004-02-02  Not Zed  <NotZed@Ximian.com>

	** See bug #53549.

	* em-folder-selector.c: Fix handling a parent path of "/".

	* mail-ops.c (mark_junk_mark): removed the really innacurate cut and
	paste comment.  This has nothing to do with filter_folder.

	** See bug #52994.

	* em-folder-properties.c (em_folder_properties_show): redirect
	vFolder uri's to the vFolder editor.

	** See bug #53502.

	* em-folder-browser.c (emfb_folder_properties): implement.

	* em-folder-tree.c (emft_popup_properties): fixed for change
	below.

	* em-folder-properties.[ch]: Moved the folder properties window
	from em-folder-tree.c to its own file.

2004-02-02  Not Zed  <NotZed@Ximian.com>

	** See bug #53559.

	* em-folder-tree.c (folder_tree_new): set CAN_FOCUS flag on the
	folder tree content widget.

	* em-folder-selector.c (em_folder_selector_construct): Don't wrap
	the folder tree in a scrolled window.  Its already in one ????.
	(em_folder_selector_construct): dont set can_focus on the folder
	tree.

2004-02-01  Bill Zhu <bill.zhu@sun.com>

        Fixes for bug #53530

        * em-utils.c (em_utils_redirect_message): Removed the duplicate 
	adding of attachments

2004-01-30  Jeffrey Stedfast  <fejj@ximian.com>

	Fixes for bug #53348

	* mail-account-gui.c (mail_account_gui_save): Only add the new
	store to the mail-component if the mail-component doesn't already
	know about it (ie. only if we are adding a new account).

	* em-folder-tree-model.c (em_folder_tree_model_add_store): Hash
	our store-info based on account here.
	(em_folder_tree_model_init): Listen for
	account_changed/account_removed signals.
	(em_folder_tree_model_finalize): Disconnect above handlers.
	(account_changed): Tear down the account store node and replace it