@@ -72,11 +72,6 @@ typedef struct _MailSession {
 	EMutex *lock;
 
 	MailAsyncEvent *async;
-
-	/* spamassassin filter options */
-	gboolean sa_local_only;
-	gboolean sa_use_daemon;
-	int sa_daemon_port;
 } MailSession;
 
 typedef struct _MailSessionClass {
@@ -100,8 +95,6 @@ init (MailSession *session)
 {
 	session->lock = e_mutex_new(E_MUTEX_REC);
 	session->async = mail_async_event_new();
-	session->sa_local_only = gconf_client_get_bool (mail_config_get_gconf_client (), "/apps/evolution/mail/junk/sa/local_only", NULL);
-	session->sa_use_daemon = gconf_client_get_bool (mail_config_get_gconf_client (), "/apps/evolution/mail/junk/sa/use_daemon", NULL);
 }
 
 static void
@@ -765,42 +758,6 @@ mail_session_forget_password (const char *key)
 	e_passwords_forget_password ("Mail", key);
 }
 
-gboolean
-mail_session_get_sa_local_only ()
-{
-	return MAIL_SESSION (session)->sa_local_only;
-}
-
-void
-mail_session_set_sa_local_only (gboolean value)
-{
-	MAIL_SESSION (session)->sa_local_only = value;
-}
-
-gboolean
-mail_session_get_sa_use_daemon ()
-{
-	return MAIL_SESSION (session)->sa_use_daemon;
-}
-
-void
-mail_session_set_sa_use_daemon (gboolean value)
-{
-	MAIL_SESSION (session)->sa_use_daemon = value;
-}
-
-int
-mail_session_get_sa_daemon_port ()
-{
-	return MAIL_SESSION (session)->sa_daemon_port;
-}
-
-void
-mail_session_set_sa_daemon_port (int value)
-{
-	MAIL_SESSION (session)->sa_daemon_port = value;
-}
-
 static void
 mail_session_check_junk_notify (GConfClient *gconf, guint id, GConfEntry *entry, CamelSession *session)
 {
@@ -816,13 +773,6 @@ mail_session_check_junk_notify (GConfClient *gconf, guint id, GConfEntry *entry,
 			camel_session_set_check_junk (session, gconf_value_get_bool (gconf_entry_get_value (entry)));
 		else if (!strcmp (key, "check_incoming_imap"))
 			camel_session_set_check_junk_for_imap (session, gconf_value_get_bool (gconf_entry_get_value (entry)));
-		else if (!strcmp (key, "local_only"))
-			mail_session_set_sa_local_only (gconf_value_get_bool (gconf_entry_get_value (entry)));
-		else if (!strcmp (key, "use_daemon"))
-			mail_session_set_sa_use_daemon (gconf_value_get_bool (gconf_entry_get_value (entry)));
-		else if (!strcmp (key, "daemon_port"))
-			mail_session_set_sa_daemon_port (gconf_value_get_int (gconf_entry_get_value (entry)));
-
 	}
 }
 
@@ -844,7 +794,6 @@ mail_session_init (const char *base_directory)
 	gconf_client_add_dir (gconf, "/apps/evolution/mail/junk", GCONF_CLIENT_PRELOAD_ONELEVEL, NULL);
 	camel_session_set_check_junk (session, gconf_client_get_bool (gconf, "/apps/evolution/mail/junk/check_incoming", NULL));
 	camel_session_set_check_junk_for_imap (session, gconf_client_get_bool (gconf, "/apps/evolution/mail/junk/check_incoming_imap", NULL));
-	mail_session_set_sa_daemon_port (gconf_client_get_int (gconf, "/apps/evolution/mail/junk/sa/daemon_port", NULL));
 	session_check_junk_notify_id = gconf_client_notify_add (gconf, "/apps/evolution/mail/junk",
 								(GConfClientNotifyFunc) mail_session_check_junk_notify,
 								session, NULL, NULL);
